# Aegis-AI

./: .env.example  .gitignore  Makefile  README.md  arch  docker-compose.yml  download_model.py  import.py  package-lock.json  package.json  test.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/aegis_ai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: agents.py  chat.py  health.py  knowledge.py  memory.py  models.py  tools.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/db/repositories/: base.py  conversations.py  knowledge.py  memory.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: agents.py  chat.py  common.py  knowledge.py  memory.py
apps/api/app/services/agents/: planner.py
apps/api/app/services/ai/: llm.py  prompts.py  reranker.py
apps/api/app/services/memory/: service.py
apps/api/app/services/rag/: chunking.py  embeddings.py  loaders.py  service.py  vector_store.py
apps/api/app/services/tools/: base.py  command.py  filesystem.py  iot.py  registry.py  web_search.py
apps/api/app/utils/: sse.py
apps/api/tests/unit/: test_chunking.py  test_embeddings.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FOLDER_STRUCTURE.md
scripts/: dev.ps1  download_model.py
(+21 files in other folders)
