[project]
name = "aegis-ai-api"
version = "0.1.0"
description = "FastAPI backend for Aegis AI, a local-first AI platform."
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate>=0.34.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "greenlet>=3.0.3",
  "huggingface-hub>=0.24.6",
  "httpx>=0.27.2",
  "markdown-it-py>=3.0.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0.1",
  "sqlalchemy>=2.0.32",
  "torch>=2.4.0",
  "transformers>=4.44.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
